--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
             </div>
             <div class="form-group">
                 <label for="gender">Gender</label><br>
-                <label class="radio-inline"><input type="radio" name="optradio" checked>Male</label>&ensp;
-                <label class="radio-inline"><input type="radio" name="optradio">Female</label>
+                <label class="radio-inline"><input type="radio" name="optradio" id="male" checked>Male</label>&ensp;
+                <label class="radio-inline"><input type="radio" name="optradio" id="female">Female</label>
             </div>
             <div class="form-group">
                 <label for="date">Birth Date</label>
@@ -49,13 +49,13 @@
             </div>
             <div class="form-group">
                 <label for="photo">Upload Photo</label>
-                <input type="file" name="pic" accept="image/*" required>
+                <input type="file" id="photo" name="pic" accept="image/*" required>
             </div>
             <div class="form-group">
                 <label for="proof">Upload ID proof</label>
-                <input type="file" name="pic" accept="image/*" required>
+                <input type="file" id="proof" name="pic" accept="image/*" required>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button><br><br>
+            <button type="submit" class="btn btn-default" onclick="saveData()">Submit</button><br><br>
         </form>
     </div>
 
